crates/pvm-contract-macros/tests/ui/view_method_cannot_reconstruct_writable_handle.stderr
error[E0133]: call to unsafe function `Lazy::<T>::new` is unsafe and requires unsafe block
  --> tests/ui/view_method_cannot_reconstruct_writable_handle.rs:29:30
   |
29 |             let mut bypass = Lazy::<U256>::new(StorageKey::from_slot(0), 0, host);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
